manifest/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ALTF__Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Altify Solution</label>
        <referenceTo>ALTF__Solution__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Id__c</fullName>
        <description>Surrogate key for mapping products to ADMIN equivalent (service_specialty_cd ADMIN) - Requested by Pooja Paliwal</description>
        <externalId>true</externalId>
        <inlineHelpText>External key from ADMIN</inlineHelpText>
        <label>Admin Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CPQU__Is_Bundle__c</fullName>
        <formula>IF(TEXT(SBQQ__ConfigurationType__c) = &apos;&apos;, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Non_Psychiatrist_Total__c</fullName>
        <description>BH Consult Fee- Non-Psychiatrist- Total (Equals the sum of the member and plan paid portions.) READ ONLY except System Administrator</description>
        <inlineHelpText>BH Consult Fee- Non-Psychiatrist- Total (Equals the sum of the member and plan paid portions.) READ ONLY except System Administrator</inlineHelpText>
        <label>Consult Fee- Non-Psychiatrist- Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Psych_MD_1stvisitonly_Total__c</fullName>
        <description>BH Consult Fee Psych/MD 1 st visit Total (Equals the sum of member and plan paid portions.) READ ONLY except System Administrator</description>
        <inlineHelpText>BH Consult Fee Psych/MD 1 st visit Total (Equals the sum of member and plan paid portions.) READ ONLY except System Administrator</inlineHelpText>
        <label>Consult Fee- Psych/MD-1stvisitonly-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consult_Fee_Psych_MD_ONGOING_Total__c</fullName>
        <description>BH Consult Fee- Psych/MD- for ONGOING visits -Total (Equals the sum of the member and plan paid portions.) READ ONLY except System Administrator</description>
        <inlineHelpText>BH Consult Fee- Psych/MD- for ONGOING visits -Total (Equals the sum of the member and plan paid portions.) READ ONLY except System Administrator</inlineHelpText>
        <label>Consult Fee- Psych/MD-ONGOING-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Product_Family__c</fullName>
        <inlineHelpText>Identification of type of product based on Contract team values</inlineHelpText>
        <label>Contract Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert Medical Services</fullName>
                </value>
                <value>
                    <fullName>Hospital and Health System</fullName>
                </value>
                <value>
                    <fullName>Livongo Services</fullName>
                </value>
                <value>
                    <fullName>Virtual Care Services</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copado_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Copado External Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Derm_Visit_Fee_Total__c</fullName>
        <description>Dermatology Visit Fee Total (Equals the sum of member and plan paid portions.) READ ONLY except System Administrator</description>
        <inlineHelpText>Dermatology Visit Fee Total (Equals the sum of member and plan paid portions.) READ ONLY except System Administrator</inlineHelpText>
        <label>Derm Visit Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disable_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Percentage__c</fullName>
        <description>This field is used to set the default Enrollment Percentage for Livongo Products. It gets used in PriceRule to calculate the Quantity.</description>
        <label>Direct Enrollment Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenMed_Consult_Included_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenMed Consult Included Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gen_Med_Consult_Fee_Total__c</fullName>
        <description>Gen Med Consult Fee Total (Equals the sum of member and plan paid portions) READ ONLY except System Administrator</description>
        <inlineHelpText>Gen Med Consult Fee Total (Equals the sum of member and plan paid portions) READ ONLY except System Administrator</inlineHelpText>
        <label>Gen Med Consult Fee - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPReferral_PCP_Fee_Total__c</fullName>
        <description>Health Pro Referral Administration Fee for PCP Referral. (Equals sum of member and plan portions.) READ ONLY except System Administrator</description>
        <inlineHelpText>Health Pro Referral Administration Fee for PCP Referral. (Equals sum of member and plan portions.) READ ONLY except System Administrator</inlineHelpText>
        <label>HPReferral PCP Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPReferral_Specialist_Fee_Total__c</fullName>
        <description>Health Pro Referral Specialist Admin Fee Total (Equals the sum member paid and plan paid portions.) READ ONLY except System Administrator</description>
        <inlineHelpText>Health Pro Referral Specialist Admin Fee Total (Equals the sum member paid and plan paid portions.) READ ONLY except System Administrator</inlineHelpText>
        <label>HPReferral Specialist Fee Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HY_Product_Included_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HY Product Included Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Plan_Enrollment_Percentage__c</fullName>
        <label>Health Plan Enrollment Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__TD_PREPROD_Product_Id__c</fullName>
        <label>TD PREPROD Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__TD_PROD_Product_Id__c</fullName>
        <label>TD PROD Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Whole_Person_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if the program is a WP Solution.</inlineHelpText>
        <label>Whole Person Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_Sell_with_HY_ConsultIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OK to Sell with HY ConsultIncluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_sell_with_GenMed_Consults_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OK to sell with GenMed Consults Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Percentage__c</fullName>
        <description>Performance Guarantee Percentage of the Product. This value is used to calculate Net ARR with PG using pricerules</description>
        <label>PG Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Participation_Percentage__c</fullName>
        <description>This field is used to set the default Participant Percentage for Livongo Products. It gets used in PriceRule to calculate the Quantity.</description>
        <label>Participation Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Portfolio__c</fullName>
        <description>The field is mapped to the definition at the Product level consistent with the definitions from the business. 
The field is rolled up from Oppt product.</description>
        <label>Product Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex Care</fullName>
                </value>
                <value>
                    <fullName>Acute Care</fullName>
                </value>
                <value>
                    <fullName>Specialty Care</fullName>
                </value>
                <value>
                    <fullName>Chronic Care</fullName>
                </value>
                <value>
                    <fullName>Mental Health Care</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the product has a promotion</description>
        <inlineHelpText>Identifies if the product has a promotion</inlineHelpText>
        <label>Promotion Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Based_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Based Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetAmendmentBehavior__c</fullName>
        <description>Indicates how assets representing this product behave on amendments.</description>
        <inlineHelpText>Select a behavior when amending assets representing this product. By default, asset quantities cannot decrease unless an upgrade is added, and no refund is applied.</inlineHelpText>
        <label>Asset Amendment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Allow Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetConversion__c</fullName>
        <description>Determines how this product is converted to asset.</description>
        <inlineHelpText>Indicates how this product is converted to asset.</inlineHelpText>
        <label>Asset Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per quote line</fullName>
                    <default>true</default>
                    <label>One per quote line</label>
                </value>
                <value>
                    <fullName>One per unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>Quantity in one batch for products sold in batches. Quantity entered in quote line will be divided by this number.</description>
        <inlineHelpText>Non-blank value designates this product is sold in batches. Enter quantity in each batch. Quantity entered in quote will be divided by this value and rounded up to the nearest integer.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPricingField__c</fullName>
        <description>Field used to calculate block pricing.</description>
        <inlineHelpText>Field used to calculate block pricing.</inlineHelpText>
        <label>Block Pricing Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
                <value>
                    <fullName>Number_of_Lives_In_quote__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Component__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as a component, excluding it from selection in product lookup.</description>
        <inlineHelpText>Marks this product as a component, excluding it from selection in product lookup.</inlineHelpText>
        <label>Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity.</description>
        <inlineHelpText>Discount rate compounded by quantity.</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationEvent__c</fullName>
        <description>Specifies when user is prompted to configure this product.</description>
        <inlineHelpText>Use this to control when Configure Products screen shows up for this product. Choose &quot;Add&quot; to limit to initial configuration. Choose &quot;Edit&quot; to subsequent configuration.</inlineHelpText>
        <label>Configuration Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ConfigurationType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
        <description>The API name of the field set that will be used for this product during configuration.</description>
        <inlineHelpText>The API name of the field set that will be used for this product during configuration.</inlineHelpText>
        <label>Configuration Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OptionConfiguration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFields__c</fullName>
        <description>Additional fields collected during configuration of this product. All of these fields must exist on Product Option and Quote Line objects.</description>
        <label>Configuration Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationFormTitle__c</fullName>
        <description>Title of the configuration form rendered from specified configuration fields.</description>
        <inlineHelpText>Title of the configuration form rendered from specified configuration fields.</inlineHelpText>
        <label>Configuration Form Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationType__c</fullName>
        <description>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</description>
        <inlineHelpText>Configuration type of this product: Choose Allowed if the user is allowed to configure the product/bundle, but not required to, Disabled when your bundle automatically selects options, or Required if the product/bundle must be configured.</inlineHelpText>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Allowed</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationValidator__c</fullName>
        <description>JavaScript function used to validate configuration of this product.</description>
        <inlineHelpText>JavaScript function used to validate configuration of this product.</inlineHelpText>
        <label>Configuration Validator</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredCodePattern__c</fullName>
        <description>Pattern used to generate product code (SKU) for configured products.</description>
        <inlineHelpText>Pattern used to generate product code (SKU) for configured products.</inlineHelpText>
        <label>Configured Code Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredDescriptionPattern__c</fullName>
        <description>Pattern used to generate dynamic product description for configured products.</description>
        <inlineHelpText>Pattern used to generate dynamic product description for configured products.</inlineHelpText>
        <label>Configured Description Pattern</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether cost for this product may be modified on individual quotes.</description>
        <inlineHelpText>Controls whether cost for this product may be modified on individual quotes.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule used as a Cost Schedule with this product.</description>
        <inlineHelpText>Discount schedule used as a Cost Schedule with this product.</inlineHelpText>
        <label>Cost Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Products (Cost Schedule)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomConfigurationPage__c</fullName>
        <label>Custom Configuration Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerCommunityAvailability__c</fullName>
        <description>Determines availability of this product in Customer Community.</description>
        <inlineHelpText>Select how this product should be available in Customer Communities.</inlineHelpText>
        <label>Customer Community Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Only when already owned</fullName>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultPricingTable__c</fullName>
        <label>Default Pricing Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segmented</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the starting quantity of the product when added.</description>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DescriptionLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates this product&apos;s description is locked (not editable on the quote).</description>
        <inlineHelpText>Flag that indicates this product&apos;s description is locked (not editable on the quote).</inlineHelpText>
        <label>Lock Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount category assigned to this product.</description>
        <inlineHelpText>Specify discount category for this product.</inlineHelpText>
        <label>Discount Category</label>
        <referenceTo>SBQQ__DiscountCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule for use with this product</description>
        <inlineHelpText>Discount schedule for use with this product</inlineHelpText>
        <label>Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quantity Discounted Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DynamicPricingConstraint__c</fullName>
        <description>Specifies constraints on dynamically calculated pricing.</description>
        <inlineHelpText>Use to place constraints on dynamically calculated prices.</inlineHelpText>
        <label>Percent Of Total Constraint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List price is minimum</fullName>
                </value>
                <value>
                    <fullName>List price is maximum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EnableLargeConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable large bundle configuration.</description>
        <inlineHelpText>Should be enabled if you experience performance errors during bundle configuration. Bundle will be processed asynchronously.</inlineHelpText>
        <label>Enable Large Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from percent of total maintenance calculations.</description>
        <inlineHelpText>Check to always exclude this product from percent of total calculations (normally non-subscription products are included in percent of total calculations).</inlineHelpText>
        <label>Exclude From Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this product should be excluded from transfer to the Opportunity.</description>
        <inlineHelpText>Indicates this product should not be transferred to the opportunity.</inlineHelpText>
        <label>Exclude From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExternallyConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</description>
        <inlineHelpText>When checked, indicates that configuring this Product automatically launches the External Configuration URL, defined in Salesforce CPQ settings.</inlineHelpText>
        <label>Externally Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on the adjusted quote line if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on the adjusted quote line if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HasConfigurationAttributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks to see if Product has Configuration Attributes</description>
        <label>Has Configuration Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HasConsumptionSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Product is assigned to at least 1 active Consumption Schedule</description>
        <inlineHelpText>Indicates if this product has at least one consumption schedule</inlineHelpText>
        <label>Has Consumption Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this product from appearing on the quote PDF.</description>
        <inlineHelpText>Excludes this product from appearing on the quote PDF.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__HidePriceInSearchResults__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product price should be displayed in the Product Search Results.</description>
        <inlineHelpText>Select checkbox to hide this product&apos;s price in the Product Search Results.</inlineHelpText>
        <label>Hide Price in Search Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IncludeInMaintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Includes products in percent of total calculations that are normally excluded (e.g.: subscription products).</description>
        <inlineHelpText>Check to always include this product in percent of total calculations (normally subscription products are excluded from percent of total calculations).</inlineHelpText>
        <label>Include In Percent Of Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__NewQuoteGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forces this product to be in its own group on a quote.</description>
        <inlineHelpText>Check to create a new quote group when this product is added (unless the current group is empty).</inlineHelpText>
        <label>New Quote Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as non discountable.</description>
        <inlineHelpText>Marks this product as not discountable.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__NonPartnerDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks this product as non-discountable for partners.</description>
        <inlineHelpText>Check to make this product non-discountable for partners.</inlineHelpText>
        <label>Non Partner Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OptionLayout__c</fullName>
        <description>Determines how options are presented to users.</description>
        <inlineHelpText>Determines how options are presented to users.</inlineHelpText>
        <label>Option Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sections</fullName>
                </value>
                <value>
                    <fullName>Tabs</fullName>
                </value>
                <value>
                    <fullName>Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OptionSelectionMethod__c</fullName>
        <description>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up a dialog box with available options.</description>
        <inlineHelpText>Determines how user selects options attached to this product. &quot;Click&quot; method presents options with checkboxes next to them. &quot;Add&quot; renders a button which brings up a dialog box with available options.</inlineHelpText>
        <label>Option Selection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Click</fullName>
                    <default>true</default>
                    <label>Click</label>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>